--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
+{% block title %}Page Not Found{% endblock %}
 {% block content %}
-<h1>404 - Page Not Found</h1>
-<p>{{ error }}</p>
-<a href="{{ url_for('main.index') }}">Back to Home</a>
+    <h2>404 - Page Not Found</h2>
+    <p>The page you are looking for does not exist.</p>
+    <a href="{{ url_for('main.index') }}" class="button">Back to Home</a>
 {% endblock %}
